# quantstock-pro

./: .env_example  .gitignore  README.md  STRUCTURE.md  THE_COMPLETE_FRAMEWORK.md  debug_context_run.py  debug_yfinance.py  deploy.sh  pyproject.toml  repomix-output.xml
app/: ai.py  api.py  api_v2.py  cache.py  context.py  exceptions.py  executor.py  fundamentals.py  fundamentals_analytics.py  fundamentals_fetcher.py  fundamentals_rules.py  fundamentals_scoring.py  governor.py  logger.py  main.py  market_data.py  middleware.py  models.py  models_v2.py  news_fetcher.py  news_intelligence.py  risk.py  service.py  settings.py  technicals.py  technicals_indicators.py  technicals_scoring.py
app/providers/: base.py  factory.py  polygon.py  yahoo.py
app/research/: diversity.py  engine.py  repository.py
docs/: 001_Prompt_Analysis_and_Correction.md  002_REST_API_Endpoint_Refactoring_Proposal.md  003_REST_API_Referance.md  004_Code_Structure_and_Functions.md  005_System_Design.md  006_Project_File_Structure.md  007_Expert_Review_and_Feedback.md  008_Project_Navigation.md  009_ALPHA QUANT REVIEWER PROMPT.md  API_REFERENCE.md  CODE_STRUCTURE_AND_FUNCTIONS.md  DESIGN.md  FILE_MAP.md  PROJECT_STRUCTURE.md  Review_and_Feedback.md  TODO.md
tests/: conftest.py  test_ai_integration.py  test_api_combinations.py  test_api_endpoints.py  test_api_v2.py  test_core_logic.py  test_granular_pipeline.py  test_institutional_invariants.py  test_real_world_forensics.py  test_response_integrity.py  test_settings.py  test_yahoo_provider.py
