[project]
name = "quantstock-pro"
version = "2.0.0"
description = "Advanced Quantitative Stock Analysis API with AI Insights"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.2.0",
    "yfinance>=1.0.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b",
    "numpy>=1.26.0",
    "google-genai>=1.0.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "cachetools>=5.3.0",
    "async-lru>=2.0.4",
    "tenacity>=8.2.3",
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

